code/kubernetes/istio/argocd/virtualservice-prod.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: argocd-virtualservice
  namespace: argocd # argocd namespace 에 배포
spec:
  hosts:
    - "argocd.cowing.co.kr"
  gateways:
    - istio-system/istio-ingressgateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: argocd-server
            port:
              number: 80
